# ternary-fleet-packing

./: CROSS-POLLINATION.md  Cargo.toml
python_backup/: i2i_pack.py  production_test.py  ternary_vec.py
src/: lib.rs
tests/: debug_optimal.rs
